Fix buttons/inputs on styleguide on smaller screens

--- a/src/customizations/styleguide/_styleguide.scss
+++ b/src/customizations/styleguide/_styleguide.scss
@@ -54,10 +54,16 @@
         &--columns {
             > * {
                 //stylelint-disable-line
-                width: 47%;
+                width: 100%;
                 margin: 2rem 0;
-                margin-right: 3%;
                 box-sizing: border-box;
+
+                @include media('>=tablet') {
+                    width: 47%;
+                    margin: 2rem 0;
+                    margin-right: 3%;
+                }
+
                 @include media('>=desktop') {
                     width: 30%;
                 }
